--- a/app/Resources/FOSUserBundle/views/Resetting/request_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Resetting/request_content.html.twig
@@ -1,15 +1,15 @@
 {{ 'core.login.modal.content'|trans }}
 
-<form action="{{ path('fos_user_resetting_send_email') }}" method="POST" class="fos_user_resetting_request" id="login_forgotten-pass-modal-form">
+<form action="{{ path('fos_user_resetting_send_email') }}" method="POST" class="fos_user_resetting_request form-horizontal" id="login_forgotten-pass-modal-form">
     <div class="form-group">
-        <label for="username" class="col-sm-4">
+        <label for="username" class="col-sm-4 control-label">
         	{{ 'core.login.email.label'|trans }}
         </label>
         <div class="col-sm-8">
-			<input type="text" id="username" name="username" placeholder="{{ 'core.login.email.placeholder'|trans }}" required="required" />
+			<input type="email" id="username" name="username" placeholder="{{ 'core.login.email.placeholder'|trans }}" class="form-control input-lg" required="required" />
 		</div>
     </div>
-    <div>
+    <div class="form-group">
         <button type="submit" class="btn btn-warning" id="login_forgotten-pass-modal-button" data-loading-text="<span class='glyphicon glyphicon-repeat'></span>">
         	{{ 'core.login.modal.button'|trans }}
         </button>
