--- a/app/Resources/FOSUserBundle/views/Security/login_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login_content.html.twig
@@ -27,16 +27,16 @@
 	    {% endif %}
 
 	    <div class="form-group">
-		    <label for="username" class="col-sm-4">{{ 'core.login.email.label'|trans }}</label>
+		    <label for="username" class="col-sm-4 control-label">{{ 'core.login.email.label'|trans }}</label>
 		    <div class="col-sm-8">
-		    	<input type="text" id="username" name="_username" value="{{ last_username }}" placeholder="{{ 'core.login.email.placeholder'|trans }}" required="required" />
+		    	<input type="email" id="username" name="_username" value="{{ last_username }}" placeholder="{{ 'core.login.email.placeholder'|trans }}" required="required" class="form-control input-lg" />
 		    </div>
 	    </div>
 
 	    <div class="form-group">
-		    <label for="password" class="col-sm-4">{{ 'core.login.password.label'|trans }}</label>
+		    <label for="password" class="col-sm-4 control-label">{{ 'core.login.password.label'|trans }}</label>
 		    <div class="col-sm-8">
-		    	<input type="password" id="password" name="_password" placeholder="{{ 'core.login.password.placeholder'|trans }}" required="required" />
+		    	<input type="password" id="password" name="_password" placeholder="{{ 'core.login.password.placeholder'|trans }}" required="required" class="form-control input-lg" />
 		    </div>
 	    </div>
 
