--- a/app/Resources/FOSUserBundle/views/Resetting/request_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Resetting/request_content.html.twig
@@ -9,7 +9,7 @@
 			<input type="email" id="username" name="username" placeholder="{{ 'core.login.email.placeholder'|trans }}" class="form-control input-lg" required="required" />
 		</div>
     </div>
-    <div class="form-group">
+    <div class="form-group" id="login_modal-submit-group">
         <button type="submit" class="btn btn-warning" id="login_forgotten-pass-modal-button" data-loading-text="<span class='glyphicon glyphicon-repeat'></span>">
         	{{ 'core.login.modal.button'|trans }}
         </button>
