--- a/app/Resources/FOSUserBundle/views/Registration/register_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/register_content.html.twig
@@ -70,7 +70,7 @@
             </div>
         </div>
 	    
-	    <div class="form-group">
+	    <div class="form-group" id="register_submit-group">
 	        <input type="submit" class="btn btn-default" value="{{ 'core.register.submit'|trans }}" />
 	    </div>
 	{{ form_end(form) }}
