--- a/web/bundles/app/css/login.css
+++ b/web/bundles/app/css/login.css
@@ -1,3 +1,10 @@
+body {
+	background-image: url("http://assets.fhuszti.tech/nao/home/home-bg.png");
+  	background-size: cover;
+  	background-position: center center;
+  	background-repeat: no-repeat;
+}
+
 #login_btn-register {
 	text-align: right;
 	margin-top: 20px;
