--- a/web/bundles/app/css/register.css
+++ b/web/bundles/app/css/register.css
@@ -1,3 +1,10 @@
+body {
+	background-image: url("http://assets.fhuszti.tech/nao/home/home-bg.png");
+  	background-size: cover;
+  	background-position: center center;
+  	background-repeat: no-repeat;
+}
+
 #register_content {
 	margin-top: 45px;
 	padding-left: 50px;
