Menu secondaire s'adapte si utilisateur connecté ou non

--- a/app/Resources/views/second-menu.html.twig
+++ b/app/Resources/views/second-menu.html.twig
@@ -22,18 +22,36 @@
 	</div>
 </a>
 
-<a href="{{ path('core_home') }}" title="{{ 'core.second-menu.register'|trans }}">
-	<div class="col-sm-12">
-		{% image 'http://assets.fhuszti.tech/nao/second-menu/register.png' %}
-    		<img src="{{ asset_url }}" alt="{{ 'core.second-menu.register'|trans }}" />
-    	{% endimage %}
-	</div>
-</a>
+{% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
+	<a href="{{ path('core_home') }}" title="{{ 'core.second-menu.profile'|trans }}">
+		<div class="col-sm-12">
+			{% image 'http://assets.fhuszti.tech/nao/second-menu/profile.png' %}
+	    		<img src="{{ asset_url }}" alt="{{ 'core.second-menu.profile'|trans }}" />
+	    	{% endimage %}
+		</div>
+	</a>
 
-<a href="{{ path('core_home') }}" title="{{ 'core.second-menu.login'|trans }}">
-	<div class="col-sm-12">
-		{% image 'http://assets.fhuszti.tech/nao/second-menu/login.png' %}
-    		<img src="{{ asset_url }}" alt="{{ 'core.second-menu.login'|trans }}" />
-    	{% endimage %}
-	</div>
-</a>
+	<a href="{{ path('core_home') }}" title="{{ 'core.second-menu.logout'|trans }}">
+		<div class="col-sm-12">
+			{% image 'http://assets.fhuszti.tech/nao/second-menu/logout.png' %}
+	    		<img src="{{ asset_url }}" alt="{{ 'core.second-menu.logout'|trans }}" />
+	    	{% endimage %}
+		</div>
+	</a>
+{% else %}
+	<a href="{{ path('core_home') }}" title="{{ 'core.second-menu.register'|trans }}">
+		<div class="col-sm-12">
+			{% image 'http://assets.fhuszti.tech/nao/second-menu/register.png' %}
+	    		<img src="{{ asset_url }}" alt="{{ 'core.second-menu.register'|trans }}" />
+	    	{% endimage %}
+		</div>
+	</a>
+
+	<a href="{{ path('core_home') }}" title="{{ 'core.second-menu.login'|trans }}">
+		<div class="col-sm-12">
+			{% image 'http://assets.fhuszti.tech/nao/second-menu/login.png' %}
+	    		<img src="{{ asset_url }}" alt="{{ 'core.second-menu.login'|trans }}" />
+	    	{% endimage %}
+		</div>
+	</a>
+{% endif %}
