--- a/app/Resources/FOSUserBundle/views/Registration/register_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/register_content.html.twig
@@ -4,7 +4,9 @@
 	</div>
 
 	<div class="hidden-xs col-sm-2 nao_title-icon">
-
+		{% image 'http://assets.fhuszti.tech/nao/second-menu/register.png' %}
+			<img src="{{ asset_url }}" alt="{{ 'core.second-menu.register'|trans }}" />
+		{% endimage %}
 	</div>
 </div>
 
