Design du footer terminé

--- a/app/Resources/views/footer.html.twig
+++ b/app/Resources/views/footer.html.twig
@@ -24,15 +24,15 @@
 	<div class="col-xs-12 col-sm-pull-7 col-sm-5">
 		<div class="hidden-xs col-sm-12" id="footer_left-links">
 			<a href="{{ path('core_home') }}" title="{{ 'core.footer.left_links.search.title'|trans }}">
-		      	{{ 'core.footer.left_links.search.link'|trans }}
+		      	{{ 'core.footer.left_links.search.link'|trans|upper }}
 		    </a>
 		    <br />
 		    <a href="{{ path('core_home') }}" title="{{ 'core.footer.left_links.observations.title'|trans }}">
-		      	{{ 'core.footer.left_links.observations.link'|trans }}
+		      	{{ 'core.footer.left_links.observations.link'|trans|upper }}
 		    </a>
 		    <br />
 		    <a href="{{ path('core_home') }}" title="{{ 'core.footer.left_links.project.title'|trans }}">
-		      	{{ 'core.footer.left_links.project.link'|trans }}
+		      	{{ 'core.footer.left_links.project.link'|trans|upper }}
 		    </a>
 		</div>
 
