--- a/app/Resources/FOSUserBundle/views/Security/login_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login_content.html.twig
@@ -16,9 +16,9 @@
     </div>
 {% endif %}
 
-<div class="col-xs-12 well" id="login_content">
+<div class="col-xs-12" id="login_content">
 	<div id="login_btn-register" class="row">
-		<a href="{{ path('fos_user_registration_register') }}" title="{{ 'core.login.register_button'|trans }}" class="btn btn-success">
+		<a href="{{ path('fos_user_registration_register') }}" title="{{ 'core.login.register_button'|trans }}" class="btn btn-info">
 			{{ 'core.login.register_button'|trans }}
 		</a>
 	</div>
@@ -36,7 +36,14 @@
 	    </div>
 
 	    <div class="form-group">
-		    <label for="password" class="col-sm-4 control-label">{{ 'core.login.password.label'|trans }}</label>
+		    <div class="col-sm-4" id="login_pass-label-group">
+		    	<label for="password" class="control-label">
+		    		{{ 'core.login.password.label'|trans }}
+		    	</label>
+		    	<div data-toggle="modal" href="#login_forgotten-pass-modal" id="login_forgotten-pass-link">
+					<a id="login_forgotten-link" data-action="{{ path('fos_user_resetting_request') }}">{{ 'core.login.forgotten_pass'|trans }}</a>
+				</div>
+		    </div>
 		    <div class="col-sm-8">
 		    	<input type="password" id="password" name="_password" placeholder="{{ 'core.login.password.placeholder'|trans }}" required="required" class="form-control input-lg" />
 		    </div>
@@ -48,14 +55,10 @@
 		</div>
 	    
 	    <div class="form-group" id="login_submit-group">
-	    	<input type="submit" id="_submit" name="_submit" value="{{ 'core.login.submit'|trans }}" class="btn btn-default" />
+	    	<input type="submit" id="_submit" name="_submit" value="{{ 'core.login.submit'|trans }}" class="btn btn-info btn-lg" />
 	    </div>
 
 	</form>
-
-		<div data-toggle="modal" href="#login_forgotten-pass-modal" id="login_forgotten-pass-link">
-			<a id="login_forgotten-link" data-action="{{ path('fos_user_resetting_request') }}">{{ 'core.login.forgotten_pass'|trans }}</a>
-		</div>
 
 		<div class="modal fade" id="login_forgotten-pass-modal">
 		  	<div class="modal-dialog">
