--- a/web/bundles/app/css/login.css
+++ b/web/bundles/app/css/login.css
@@ -15,6 +15,8 @@ body {
 	padding-left: 50px;
 	padding-right: 50px;
 	font-size: 1.2em;
+	background-color: rgb(187, 223, 180);
+	border: 1px outset #eee;
 }
 #login_content form {
 	margin-top: 40px;
@@ -27,16 +29,28 @@ body {
 #login_content form [type="checkbox"] {
 	margin-left: 20px;
 }
-#login_content form [type="submit"] {
-	margin-bottom: 0;
-}
 #login_content #login_remember-group, #login_content #login_submit-group {
 	text-align: center;
 }
 
+#login_content #login_pass-label-group {
+	text-align: right;
+}
 #login_content #login_forgotten-pass-link {
 	margin-bottom: 30px;
-	margin-top: 40px;
+	font-size: 0.7em;
+}
+#login_content #login_forgotten-pass-link a {
+	color: #5bc0de;
+	cursor: pointer;
+}
+
+#login_content .modal {
+	background-color: rgb(255, 255, 255);
+	background-color: rgba(255, 255, 255, 0.7);
+}
+#login_content .modal-content {
+	background-color: rgb(187, 223, 180);
 }
 #login_content .modal .form-group {
 	margin-bottom: 0;
@@ -48,9 +62,11 @@ body {
 #login_content #login_modal-submit-group {
 	margin-top: 0;
 	margin-bottom: 30px;
+	margin-right: 30px;
+	text-align: right;
 }
 #login_content #login_forgotten-pass-modal-button {
-	min-width: 100px;
+	min-width: 150px;
 }
 .btn-loading {
   animation: spin 2s linear infinite;
@@ -92,6 +108,13 @@ body {
 
 	#login_content form label {
 		margin-bottom: 15px;
+	}
+	#login_content #login_pass-label-group {
+		text-align: left;
+	}
+	#login_content #login_forgotten-pass-link {
+		float: right;
+		margin-top: 5px;
 	}
 	#login_content .modal .form-group {
 		text-align: left;
