Correction de quelques détails dans le deisgn de login et register

--- a/web/bundles/app/css/login.css
+++ b/web/bundles/app/css/login.css
@@ -16,6 +16,7 @@ body {
 	padding-right: 50px;
 	font-size: 1.2em;
 	background-color: rgb(187, 223, 180);
+	background-color: rgba(187, 223, 180, 0.95);
 	border: 1px outset #eee;
 }
 #login_content form {
