--- a/web/bundles/app/css/login.css
+++ b/web/bundles/app/css/login.css
@@ -19,6 +19,9 @@ body {
 	background-color: rgba(187, 223, 180, 0.95);
 	border: 1px outset #eee;
 }
+#login_content .login_error {
+	margin-top: 30px;
+}
 #login_content form {
 	margin-top: 40px;
 	padding-left: 50px;
