--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -22,6 +22,7 @@
                 '//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css'
                 'bundles/app/css/main.css'
                 'bundles/app/css/second-menu.css'
+                'bundles/app/css/header.css'
                 'bundles/app/css/footer.css' %}
                 <link rel="stylesheet" href="{{ asset_url }}" type="text/css">
             {% endstylesheets %}
