--- a/app/Resources/views/core/find.html.twig
+++ b/app/Resources/views/core/find.html.twig
@@ -1,7 +1,9 @@
 {% extends 'layout.html.twig' %}
 {% set homepage = true %}
 {% block body %}
-<div class="container" id="container">
+<div class="container" id="container_fiche" style="display:none;">
+</div>
+<div class="container" id="container_find">
 
 	{{ form_start(form) }}
 	{{ form_widget(form.myfind) }}
@@ -16,9 +18,8 @@
 
 $(document).ready(function(){
 	$('#form_myfind').keyup(function() {
-
 	  var value = $(this).val();
-	  	if(value === '') {
+	  	if(value === '' || value.length < 3) {
 	  		$('#results').empty();
   		}
   		else {
@@ -28,10 +29,19 @@ $(document).ready(function(){
 	         data : 'search=' + value,
 	         success: function(reponse) { 
 	     		$('#results').empty();
-				Object.keys(reponse).forEach(function(key) {
-				    $('#results').prepend('<a href="'+ reponse[key].link +'" class="list-group-item theFind">'+ reponse[key].name +'</a>');
-				});
-	          }
+	     	    if (reponse.error) {
+     	    		$('#results').prepend('<p>{{ 'core.find.msg.nofind'|trans }}</p>');
+	     	    }
+	     	    else {
+					Object.keys(reponse).forEach(function(key) {
+					    $('#results').prepend('<a href="'+ reponse[key].link +'" class="list-group-item theFind">'+ reponse[key].name +'</a>');
+					});
+	     	    }
+	          },
+             error: function() { 
+                $('#results').empty();
+                $('#results').html('<p>{{ 'core.find.msg.error'|trans }}</p>');
+                }
 	      });
   		}
 	});
@@ -40,8 +50,9 @@ $(document).ready(function(){
 
 $("#results").on("click", "a.theFind", function(){
 	var href = $(this).attr('href');
-    $('#container').empty();
-    $('#container').load(href);
+    $('#container_find').hide('slow');
+    $('#container_fiche').load(href);
+    $('#container_fiche').show('slow');
     return false;
 });
 </script>
