--- a/app/Resources/FOSUserBundle/views/Profile/edit_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Profile/edit_content.html.twig
@@ -1,8 +1,8 @@
-{% trans_default_domain 'FOSUserBundle' %}
-
 {{ form_start(form, { 'action': path('fos_user_profile_edit'), 'attr': { 'class': 'fos_user_profile_edit' } }) }}
     {{ form_widget(form) }}
     <div>
-        <input type="submit" value="{{ 'profile.edit.submit'|trans }}" />
+        <button type="submit" id="profile_email-modal-button" data-loading-text="<span class='glyphicon glyphicon-repeat'></span>">
+        	{{ 'profile.edit.submit'|trans }}"
+        </button>
     </div>
 {{ form_end(form) }}
