--- a/web/bundles/app/css/main.css
+++ b/web/bundles/app/css/main.css
@@ -64,6 +64,14 @@ a {
   max-height: 51px;
 }
 
+.btn-loading {
+  animation: spin 2s linear infinite;
+}
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
 
 
 
