--- a/app/Resources/views/header.html.twig
+++ b/app/Resources/views/header.html.twig
@@ -25,7 +25,7 @@
                     <span id="icon-bar" class="f icon-bar"></span>
                     <span id="icon-bar" class="f icon-bar"></span>
                 </button>
-                <p class="navbar-brand"><<<<</p>
+                <p class="navbar-brand"></p>
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
