--- a/app/Resources/views/header.html.twig
+++ b/app/Resources/views/header.html.twig
@@ -3,17 +3,17 @@
 	<div id="images">
 		<div id="logo" class="col-sm-3">
 			{% image 'http://assets.fhuszti.tech/nao/logo.png' %}
-				 <img class="img-responsive" src="{{ 'http://assets.fhuszti.tech/nao/logo.png' }}" alt="{{'core.logo.alt'|trans}}" class="hidden-xs" />
+				 <img class="img-responsive" src="{{ 'http://assets.fhuszti.tech/nao/logo.png' }}" alt="{{'core.site.icon'|trans}}" class="hidden-xs" />
 			{% endimage %}
 		</div>
 		<div id="header-middle-text" class="col-sm-4">
 			{% image 'http://assets.fhuszti.tech/nao/logo.png' %}
-				 <img  class="img-responsive" src="{{ 'http://assets.fhuszti.tech/nao/header/header-middle-text.png' }}" alt="{{'core.header-middle-text.alt'|trans}}" class="hidden-xs" />
+				 <img  class="img-responsive" src="{{ 'http://assets.fhuszti.tech/nao/header/header-middle-text.png' }}" alt="{{'core.site.icon'|trans}}" class="hidden-xs" />
 			{% endimage %}
 		</div>
 		<div id="header-birds-text" class="col-sm-5">
 			{% image 'http://assets.fhuszti.tech/nao/logo.png' %}
-				 <img id="image-right" class="img-responsive" src="{{ 'http://assets.fhuszti.tech/nao/header/header-birds-text.png' }}" alt="{{'core.header-middle-text.alt'|trans}}" class="hidden-xs" />
+				 <img id="image-right" class="img-responsive" src="{{ 'http://assets.fhuszti.tech/nao/header/header-birds-text.png' }}" alt="{{'core.site.icon'|trans}}" class="hidden-xs" />
 			{% endimage %}
 		</div>
 	</div>
